# ai-disk-doctor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE-APACHE  README.md  README.zh-CN.md  windows-ai-space-manager-project-plan.md
aidisk/: Cargo.toml  dashboard.html
aidisk/config/: policy.yaml
aidisk/rules/: ai-agents.yaml  ai-caches.yaml  ai-clis.yaml  ai-coding-agents.yaml  ai-ides-next.yaml  ai-ides.yaml  ai-installed-apps.yaml  ai-installers.yaml  ai-runtimes.yaml  ai-test-artifacts.yaml  browsers.yaml  dev-artifacts.yaml  dev-caches.yaml  docker-build-cache.yaml  docker-volumes.yaml  docker.yaml  gpu-runners.yaml  huggingface.yaml  mcp-servers.yaml  model-files.yaml  models.yaml  playwright.yaml  sensitive-samples.yaml  sync-drives.yaml  windows-system.yaml  wsl.yaml
aidisk/src/: anomaly.rs  cleaner.rs  diff.rs  doctor.rs  history.rs  main.rs  planner.rs  policy.rs  reporter.rs  rules.rs  rules_repo.rs  scanner.rs  test_support.rs  visualize.rs  visualize_css.txt  visualize_js.txt
aidisk/tests/: anomaly_cli.rs  clean_json_cli.rs  doctor_cli.rs  json_errors_cli.rs  large_files_cli.rs  readme_artifacts.rs  release_artifacts.rs  scan_category.rs  scan_smoke.rs  skill_artifacts.rs  visualize_cli.rs
aidisk/tests/fixtures/: README.md
aidisk/tests/fixtures/community-rules/rules/: community-cache.yaml
aidisk/tests/fixtures/windows-user/: README.md
aidisk/tests/fixtures/windows-user/.ollama/models/blobs/: sha256-demo
aidisk/tests/fixtures/windows-user/AppData/Local/Docker/build-cache/: cache.db
docs/: architecture.md  cross-platform-verification.md  (+7 more)
(+75 files in other folders)
