[package]
name = "aidisk"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "Windows AI space diagnosis CLI"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
glob = "0.3"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sysinfo = "0.37"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
opt-level = "z"
